# deep-learning-debugger

./: .gitignore  CMakeLists.txt  README.md
server/paddlespeech/: paddlespeechserver.py  parse.py  server.py  speech.py  通信协议手册.md
src/: main.cpp
src/alg/audio/: paddlespeechclient.cpp  paddlespeechclient.h
src/alg/classify/: cifar10.cpp  cifar10.h
src/alg/detect/: yolact.cpp  yolact.h  yolov5s.cpp  yolov5s.h  yolov8npose.cpp  yolov8npose.h
src/alg/face/: arcface.cpp  arcface.h  facealign.cpp  facealign.h  retinaface.cpp  retinaface.h
src/ui/: mainwindow.cpp  mainwindow.h
src/ui/subpage/: audiopage.cpp  audiopage.h  classifypage.cpp  classifypage.h  detectpage.cpp  detectpage.h  facepage.cpp  facepage.h
src/ui/subwidget/: audiowaveview.cpp  audiowaveview.h  faceview.cpp  faceview.h  imageview.cpp  imageview.h
src/utils/: audiocontrol.cpp  audiocontrol.h  cameracontrol.cpp  cameracontrol.h  utils.cpp  utils.h
